--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: FYX-SORT CI
+name: FYX-SORT Benchmark vs IPS⁴o
 
 on:
   push:
@@ -7,25 +7,13 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
+  benchmark:
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        compiler:
-          - { name: "gcc",   cc: "gcc",   cxx: "g++",   flags: "-O3 -march=native" }
-          - { name: "clang", cc: "clang", cxx: "clang++", flags: "-O3 -march=native" }
-        exclude:
-          # MSVC 不适用 GCC/Clang
-          - os: windows-latest
-            compiler: { name: "gcc", cc: "gcc", cxx: "g++", flags: "-O3 -march=native" }
-          - os: windows-latest
-            compiler: { name: "clang", cc: "clang", cxx: "clang++", flags: "-O3 -march=native" }
-        include:
-          # Windows 使用 MSVC
-          - os: windows-latest
-            compiler: { name: "msvc", cc: "cl", cxx: "cl", flags: "/O2 /std:c++17" }
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout
@@ -37,50 +25,28 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y g++ clang
 
-      - name: Set up environment (Unix)
-        if: runner.os != 'Windows'
+      - name: Download IPS⁴o (temporary, MIT licensed)
+        shell: bash
         run: |
-          echo "CC=${{ matrix.compiler.cc }}" >> $GITHUB_ENV
-          echo "CXX=${{ matrix.compiler.cxx }}" >> $GITHUB_ENV
-          echo "CXXFLAGS=${{ matrix.compiler.flags }} -std=c++17 -DNDEBUG -pthread" >> $GITHUB_ENV
+          curl -fsSL -o ips4o.hpp https://raw.githubusercontent.com/SaschaWitt/ips4o/master/include/ips4o.hpp
 
-      - name: Set up environment (Windows)
-        if: runner.os == 'Windows'
+      - name: Build and run benchmark (Linux/macOS)
+        if: runner.os != 'Windows'
+        shell: bash
         run: |
-          echo "Using MSVC by default"
+          g++ -O3 -march=native -std=c++17 -DNDEBUG -pthread -DFYX_MAIN -I. benchmark.cpp -o bench
+          ./bench
+
+      - name: Build and run benchmark (Windows)
+        if: runner.os == 'Windows'
         shell: cmd
-
-      - name: Build test (Unix)
-        if: runner.os != 'Windows'
         run: |
-          $CXX $CXXFLAGS -I. test_fyx_sort.cpp -o test_fyx_sort
-          ./test_fyx_sort
+          cl /EHsc /std:c++17 /O2 /DNDEBUG /DFYX_MAIN /I. benchmark.cpp
+          .\benchmark.exe
 
-      - name: Build test (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          cl /EHsc /std:c++17 /O2 /DNDEBUG /I. test_fyx_sort.cpp
-          .\test_fyx_sort.exe
-
-  benchmark:
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install g++
-        run: sudo apt-get install -y g++
-
-      - name: Run benchmark
-        run: |
-          g++ -O3 -march=native -std=c++17 -DNDEBUG -pthread -I. test_fyx_sort.cpp -o bench
-          timeout 60s ./bench || echo "Benchmark completed or timed out."
-
-      - name: Upload benchmark log
+      - name: Upload benchmark report
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: benchmark-log-${{ github.sha }}
-          path: benchmark.log
+          name: benchmark-report-${{ matrix.os }}
+          path: benchmark.md
